# libshmal

./: AUTHORS  ChangeLog  Doxyfile  Makefile.am  README  README.md  TODO  configure.ac  shmal.c  shmal.h
